--- a/.github/workflows/5.15-pr-AX6.yml
+++ b/.github/workflows/5.15-pr-AX6.yml
@@ -19,7 +19,7 @@ on:
         required: false
         default: 'false'      
   schedule:
-     - cron: 0 16 * * *
+     - cron: 0 16 * * fri
   #  每天晚上凌晨0点自动编译.
   #  watch:
   #    types: started
@@ -235,14 +235,14 @@ jobs:
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
-        retain_days: 1
+        retain_days: 7
         keep_minimum_runs: 3
 
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.1.0
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-        keep_latest: 20
+        keep_latest: 16
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
