--- a/.github/workflows/5.15-im-AX6.yml
+++ b/.github/workflows/5.15-im-AX6.yml
@@ -33,7 +33,7 @@ env:
   REPO_URL: https://github.com/1715173329/imoutowrt
   REPO_BRANCH: master-ax3000-5.15 
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/AX6-im-5.15.config
+  CONFIG_FILE: config/5.15-im-AX6.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   DIY_P3_SH: diy-part3.sh
