--- a/config/5.15-im-AX6.config
+++ b/config/5.15-im-AX6.config
@@ -214,7 +214,7 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
 CONFIG_VERSION_CODE="0623-3f9aff0"
 CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_DIST="ImoutoWrt"
+CONFIG_VERSION_DIST="🚀 Autobuild"
 CONFIG_VERSION_FILENAMES=y
 CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
 CONFIG_VERSION_HWREV=""
