--- a/config/5.15-im-AX6.config
+++ b/config/5.15-im-AX6.config
@@ -19,7 +19,23 @@ CONFIG_LIBCURL_UNIX_SOCKETS=y
 CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_NODEJS_16=y
 CONFIG_NODEJS_ICU_SMALL=y
-# CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA is not set
+
+
+#tbcc加速默认集成高通通用SFE加速
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
+
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM is not set
+CONFIG_PACKAGE_luci-app-turboacc=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
+
+
+
 CONFIG_PACKAGE_autocore-arm=y
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_ca-certificates=y
