--- a/config/5.15-im-AX6.config
+++ b/config/5.15-im-AX6.config
@@ -1,9 +1,12 @@
 CONFIG_TARGET_ipq807x=y
 CONFIG_TARGET_ipq807x_generic=y
 CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
+
 CONFIG_DEVEL=y
+
 # CONFIG_FEED_nss_packages is not set
 CONFIG_IMAGEOPT=y
+
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_CRYPTO_AUTH=y
 CONFIG_LIBCURL_FILE=y
@@ -12,6 +15,7 @@ CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_NGHTTP2=y
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
+
 CONFIG_LIBCURL_TFTP=y
 CONFIG_LIBCURL_THREADED_RESOLVER=y
 CONFIG_LIBCURL_TLS_SRP=y
@@ -19,6 +23,15 @@ CONFIG_LIBCURL_UNIX_SOCKETS=y
 CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_NODEJS_16=y
 CONFIG_NODEJS_ICU_SMALL=y
+
+#语言
+CONFIG_LUCI_LANG_en=y
+CONFIG_LUCI_LANG_zh_Hans=y
+
+
+#虚拟内存
+CONFIG_PACKAGE_kmod-zram=y
+CONFIG_PACKAGE_zram-swap=y
 
 
 #tbcc加速默认集成高通通用SFE加速
@@ -34,6 +47,22 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
 
+
+#CONFIG_PACKAGE_ipv6helper=y
+#ipv6
+# CONFIG_PACKAGE_dnsmasq is not set
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
+CONFIG_PACKAGE_dnsmasq_full_dhcp=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=y
+CONFIG_PACKAGE_dnsmasq_full_noid=y
+CONFIG_PACKAGE_dnsmasq_full_tftp=y
+#CONFIG_PACKAGE_6in4=y
+#CONFIG_PACKAGE_6rd=y
+#CONFIG_PACKAGE_6to4=y
 
 
 CONFIG_PACKAGE_autocore-arm=y
@@ -89,10 +118,16 @@ CONFIG_PACKAGE_kmod-nf-tproxy=y
 CONFIG_PACKAGE_kmod-nfnetlink-queue=y
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
 CONFIG_PACKAGE_kmod-tun=y
+
+
+#删除默认的USB相关
+
 # CONFIG_PACKAGE_kmod-usb-core is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
+
+
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap=y
@@ -124,19 +159,37 @@ CONFIG_PACKAGE_libuv=y
 # CONFIG_PACKAGE_libwolfssl is not set
 CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_lrzsz=y
+
 CONFIG_PACKAGE_luci-app-argon-config=y
+
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-ddns=y
+
 CONFIG_PACKAGE_luci-app-filetransfer=y
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
+
 CONFIG_PACKAGE_luci-app-openclash=y
+
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+
+CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
+CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+CONFIG_PACKAGE_simple-obfs-client=y
+
+
+
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
+
+
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
@@ -150,7 +203,11 @@ CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn is not set
 CONFIG_PACKAGE_luci-proto-bonding=y
 CONFIG_PACKAGE_luci-proto-relay=y
+
+
 CONFIG_PACKAGE_luci-theme-argon=y
+
+
 CONFIG_PACKAGE_mhz=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_miniupnpd-iptables=y
@@ -170,13 +227,9 @@ CONFIG_PACKAGE_ruby-psych=y
 CONFIG_PACKAGE_ruby-stringio=y
 CONFIG_PACKAGE_ruby-strscan=y
 CONFIG_PACKAGE_ruby-yaml=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
-CONFIG_PACKAGE_simple-obfs-client=y
+
+
+
 CONFIG_PACKAGE_strongswan=y
 CONFIG_PACKAGE_strongswan-charon=y
 CONFIG_PACKAGE_strongswan-ipsec=y
@@ -196,14 +249,23 @@ CONFIG_PACKAGE_strongswan-mod-updown=y
 CONFIG_PACKAGE_strongswan-mod-x509=y
 CONFIG_PACKAGE_strongswan-mod-xauth-generic=y
 CONFIG_PACKAGE_strongswan-mod-xcbc=y
+
+
+
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_vlmcsd=y
+
+
 CONFIG_PACKAGE_wget-ssl=y
 # CONFIG_PACKAGE_wpad-basic-wolfssl is not set
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_xray-core=y
+
+
 # CONFIG_PACKAGE_zerotier is not set
+
+
 CONFIG_PACKAGE_zlib=y
 CONFIG_STRONGSWAN_ROUTING_TABLE="220"
 CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
