--- a/config/5.15-im-AX6.config
+++ b/config/5.15-im-AX6.config
@@ -25,8 +25,8 @@ CONFIG_NODEJS_16=y
 CONFIG_NODEJS_ICU_SMALL=y
 
 #语言
-CONFIG_LUCI_LANG_en=y
-CONFIG_LUCI_LANG_zh_Hans=y
+#CONFIG_LUCI_LANG_en=y
+#CONFIG_LUCI_LANG_zh_Hans=y
 
 
 #虚拟内存
@@ -251,6 +251,14 @@ CONFIG_PACKAGE_strongswan-mod-xauth-generic=y
 CONFIG_PACKAGE_strongswan-mod-xcbc=y
 
 
+CONFIG_PACKAGE_luci-app-ramfree=y
+CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
+
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_ttyd=y
+
+
 
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_terminfo=y
@@ -272,18 +280,22 @@ CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
 CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53+crypto+crc"
 CONFIG_TARGET_OPTIONS=y
 CONFIG_VERSIONOPT=y
-CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
-CONFIG_VERSION_CODE="0623-3f9aff0"
+
+
+# CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
+# CONFIG_VERSION_CODE="0623-3f9aff0"
 CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_DIST="Autobuild"
+# CONFIG_VERSION_DIST="Autobuild"
 CONFIG_VERSION_FILENAMES=y
-CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
+# CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
 CONFIG_VERSION_HWREV=""
 CONFIG_VERSION_MANUFACTURER="Xiaomi"
-CONFIG_VERSION_MANUFACTURER_URL="http://www.miwifi.com/"
-CONFIG_VERSION_NUMBER="ALPHA"
+# CONFIG_VERSION_MANUFACTURER_URL="http://www.miwifi.com/"
+# CONFIG_VERSION_NUMBER="ALPHA"
 CONFIG_VERSION_PRODUCT="Redmi AX6"
-CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
-CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
+# CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
+# CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
+
+
 # CONFIG_WPA_WOLFSSL is not set
 CONFIG_PACKAGE_kmod-nls-base=y
