--- a/config/5.15-im-AX6.config
+++ b/config/5.15-im-AX6.config
@@ -3,8 +3,8 @@ CONFIG_TARGET_ipq807x_generic=y
 CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
 
 CONFIG_DEVEL=y
+CONFIG_LIBCURL_NGHTTP2=y
 
-# CONFIG_FEED_nss_packages is not set
 CONFIG_IMAGEOPT=y
 
 CONFIG_LIBCURL_COOKIES=y
@@ -12,7 +12,6 @@ CONFIG_LIBCURL_CRYPTO_AUTH=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
 CONFIG_LIBCURL_HTTP=y
-CONFIG_LIBCURL_NGHTTP2=y
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
 
@@ -34,6 +33,14 @@ CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
 
+#删除默认的USB相关
+
+# CONFIG_PACKAGE_kmod-usb-core is not set
+# CONFIG_PACKAGE_kmod-usb-dwc3 is not set
+# CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
+# CONFIG_PACKAGE_kmod-usb3 is not set
+
+
 #tbcc加速默认集成高通通用SFE加速
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
@@ -46,6 +53,11 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
+
+
+# CONFIG_FEED_nss_packages is not set
+# CONFIG_PACKAGE_kmod-tcp-bbr is not set
+
 
 
 #CONFIG_PACKAGE_ipv6helper=y
@@ -116,16 +128,8 @@ CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
 CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-nf-tproxy=y
 CONFIG_PACKAGE_kmod-nfnetlink-queue=y
-# CONFIG_PACKAGE_kmod-tcp-bbr is not set
 CONFIG_PACKAGE_kmod-tun=y
 
-
-#删除默认的USB相关
-
-# CONFIG_PACKAGE_kmod-usb-core is not set
-# CONFIG_PACKAGE_kmod-usb-dwc3 is not set
-# CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
-# CONFIG_PACKAGE_kmod-usb3 is not set
 
 
 CONFIG_PACKAGE_libatomic=y
@@ -163,42 +167,58 @@ CONFIG_PACKAGE_lrzsz=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 
 CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-ddns=y
+# CONFIG_PACKAGE_luci-app-ddns is not set
 
 CONFIG_PACKAGE_luci-app-filetransfer=y
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 
 CONFIG_PACKAGE_luci-app-openclash=y
 
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-ssr-plus is not set
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
+#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
 
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
-CONFIG_PACKAGE_simple-obfs-client=y
+#CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
+#CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
+#CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
+#CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+#CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
+#CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+#CONFIG_PACKAGE_simple-obfs-client=y
 
+
+CONFIG_PACKAGE_luci-app-passwall=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_IPv6_Nat is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
 
 
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
-CONFIG_PACKAGE_luci-app-upnp=y
+# CONFIG_PACKAGE_luci-app-upnp is not set
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn is not set
-CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn is not set
-CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn is not set
 CONFIG_PACKAGE_luci-proto-bonding=y
@@ -230,33 +250,33 @@ CONFIG_PACKAGE_ruby-yaml=y
 
 
 
-CONFIG_PACKAGE_strongswan=y
-CONFIG_PACKAGE_strongswan-charon=y
-CONFIG_PACKAGE_strongswan-ipsec=y
-CONFIG_PACKAGE_strongswan-minimal=y
-CONFIG_PACKAGE_strongswan-mod-aes=y
-CONFIG_PACKAGE_strongswan-mod-gmp=y
-CONFIG_PACKAGE_strongswan-mod-hmac=y
-CONFIG_PACKAGE_strongswan-mod-kernel-libipsec=y
-CONFIG_PACKAGE_strongswan-mod-kernel-netlink=y
-CONFIG_PACKAGE_strongswan-mod-nonce=y
-CONFIG_PACKAGE_strongswan-mod-pubkey=y
-CONFIG_PACKAGE_strongswan-mod-random=y
-CONFIG_PACKAGE_strongswan-mod-sha1=y
-CONFIG_PACKAGE_strongswan-mod-socket-default=y
-CONFIG_PACKAGE_strongswan-mod-stroke=y
-CONFIG_PACKAGE_strongswan-mod-updown=y
-CONFIG_PACKAGE_strongswan-mod-x509=y
-CONFIG_PACKAGE_strongswan-mod-xauth-generic=y
-CONFIG_PACKAGE_strongswan-mod-xcbc=y
+# CONFIG_PACKAGE_strongswan is not set
+#CONFIG_PACKAGE_strongswan-charon=y
+#CONFIG_PACKAGE_strongswan-ipsec=y
+#CONFIG_PACKAGE_strongswan-minimal=y
+#CONFIG_PACKAGE_strongswan-mod-aes=y
+#CONFIG_PACKAGE_strongswan-mod-gmp=y
+#CONFIG_PACKAGE_strongswan-mod-hmac=y
+#CONFIG_PACKAGE_strongswan-mod-kernel-libipsec=y
+#CONFIG_PACKAGE_strongswan-mod-kernel-netlink=y
+#CONFIG_PACKAGE_strongswan-mod-nonce=y
+#CONFIG_PACKAGE_strongswan-mod-pubkey=y
+#CONFIG_PACKAGE_strongswan-mod-random=y
+#CONFIG_PACKAGE_strongswan-mod-sha1=y
+#CONFIG_PACKAGE_strongswan-mod-socket-default=y
+#CONFIG_PACKAGE_strongswan-mod-stroke=y
+#CONFIG_PACKAGE_strongswan-mod-updown=y
+#CONFIG_PACKAGE_strongswan-mod-x509=y
+#CONFIG_PACKAGE_strongswan-mod-xauth-generic=y
+#CONFIG_PACKAGE_strongswan-mod-xcbc=y
 
 
-CONFIG_PACKAGE_luci-app-ramfree=y
-CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
+# CONFIG_PACKAGE_luci-app-ramfree is not set
+#CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 
-CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-CONFIG_PACKAGE_ttyd=y
+# CONFIG_PACKAGE_luci-app-ttyd is not set
+#CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+#CONFIG_PACKAGE_ttyd=y
 
 
 
@@ -282,19 +302,19 @@ CONFIG_TARGET_OPTIONS=y
 CONFIG_VERSIONOPT=y
 
 
-# CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
+CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
 # CONFIG_VERSION_CODE="0623-3f9aff0"
 CONFIG_VERSION_CODE_FILENAMES=y
-# CONFIG_VERSION_DIST="Autobuild"
+CONFIG_VERSION_DIST="Autobuild"
 CONFIG_VERSION_FILENAMES=y
-# CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
+CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
 CONFIG_VERSION_HWREV=""
 CONFIG_VERSION_MANUFACTURER="Xiaomi"
 # CONFIG_VERSION_MANUFACTURER_URL="http://www.miwifi.com/"
-# CONFIG_VERSION_NUMBER="ALPHA"
+CONFIG_VERSION_NUMBER="ALPHA"
 CONFIG_VERSION_PRODUCT="Redmi AX6"
-# CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
-# CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
+CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
+CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
 
 
 # CONFIG_WPA_WOLFSSL is not set
