--- a/config/5.15-im-AX6.config
+++ b/config/5.15-im-AX6.config
@@ -45,11 +45,11 @@ CONFIG_PACKAGE_zram-swap=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
 
-# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM is not set
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_Shortcut_FE_for_ECM=y 
 CONFIG_PACKAGE_luci-app-turboacc=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE is not set
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER is not set
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
@@ -187,28 +187,6 @@ CONFIG_PACKAGE_luci-app-openclash=y
 #CONFIG_PACKAGE_simple-obfs-client=y
 
 
-CONFIG_PACKAGE_luci-app-passwall=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_IPv6_Nat is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
-
-
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
 # CONFIG_PACKAGE_luci-app-upnp is not set
@@ -302,19 +280,19 @@ CONFIG_TARGET_OPTIONS=y
 CONFIG_VERSIONOPT=y
 
 
-CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
+# CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
 # CONFIG_VERSION_CODE="0623-3f9aff0"
 CONFIG_VERSION_CODE_FILENAMES=y
 CONFIG_VERSION_DIST="Autobuild"
 CONFIG_VERSION_FILENAMES=y
-CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
+# CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
 CONFIG_VERSION_HWREV=""
 CONFIG_VERSION_MANUFACTURER="Xiaomi"
 # CONFIG_VERSION_MANUFACTURER_URL="http://www.miwifi.com/"
 CONFIG_VERSION_NUMBER="ALPHA"
 CONFIG_VERSION_PRODUCT="Redmi AX6"
-CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
-CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
+# CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
+# CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
 
 
 # CONFIG_WPA_WOLFSSL is not set
