--- a/.github/workflows/5.15-ax3600.yml
+++ b/.github/workflows/5.15-ax3600.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: 5.15-AX3600
+name: 5.15-ax3600
 
 on:
   repository_dispatch:
@@ -33,7 +33,7 @@ env:
   REPO_URL: https://github.com/robimarko/openwrt
   REPO_BRANCH: ipq807x-5.15 
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/5.15-AX3600.config
+  CONFIG_FILE: config/5.15-ax3600.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
@@ -42,8 +42,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: 5.15-AX3600
-  PRODUCT_NAME: 5.15-AX3600
+  FILE_NAME: 5.15-ax3600
+  PRODUCT_NAME: 5.15-ax3600
 
 jobs:
   build:
