--- a/.github/workflows/mi-ac2100.yml
+++ b/.github/workflows/mi-ac2100.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: Mi-AC2100
+name: mi-ac2100
 
 on:
   repository_dispatch:
@@ -33,7 +33,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master 
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/AC2100.config
+  CONFIG_FILE: config/ac2100.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
@@ -42,8 +42,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: Mi-AC2100
-  PRODUCT_NAME: Mi-AC2100
+  FILE_NAME: mi-ac2100
+  PRODUCT_NAME: mi-ac2100
 
 jobs:
   build:
