--- a/.github/workflows/5.15-im-ax6.yml
+++ b/.github/workflows/5.15-im-ax6.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: 5.15-im-AX6
+name: 5.15-im-ax6
 
 on:
   repository_dispatch:
@@ -33,7 +33,7 @@ env:
   REPO_URL: https://github.com/1715173329/imoutowrt
   REPO_BRANCH: master-ax3000-5.15 
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/5.15-im-AX6.config
+  CONFIG_FILE: config/5.15-im-ax6.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   DIY_P3_SH: diy-part3.sh
@@ -43,8 +43,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: 5.15-im-AX6
-  PRODUCT_NAME: 5.15-im-AX6
+  FILE_NAME: 5.15-im-ax6
+  PRODUCT_NAME: 5.15-im-ax6
 
 jobs:
   build:
