--- a/.github/workflows/5.15-pr-AX6.yml
+++ b/.github/workflows/5.15-pr-AX6.yml
@@ -33,7 +33,7 @@ env:
   REPO_URL: https://github.com/robimarko/openwrt
   REPO_BRANCH: ipq807x-5.15-pr 
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/5.15-im-AX6.config
+  CONFIG_FILE: config/5.15-pr-ax6.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   DIY_P3_SH: diy-part3.sh
