--- a/config/5.15-im-ax6.config
+++ b/config/5.15-im-ax6.config
@@ -259,7 +259,7 @@ CONFIG_PACKAGE_ruby-yaml=y
 
 
 CONFIG_PACKAGE_tcping=y
-CONFIG_PACKAGE_terminfo=y
+# CONFIG_PACKAGE_terminfo is not set
 CONFIG_PACKAGE_vlmcsd=y
 
 
