--- a/config/5.15-im-ax6.config
+++ b/config/5.15-im-ax6.config
@@ -303,5 +303,22 @@ CONFIG_TARGET_OPTIONS=y
 CONFIG_VERSIONOPT=y
 
 
+CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
+CONFIG_VERSION_CODE="0623-3f9aff0"
+CONFIG_VERSION_CODE_FILENAMES=y
+CONFIG_VERSION_DIST="OpenWrt"
+CONFIG_VERSION_FILENAMES=y
+CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
+CONFIG_VERSION_HWREV=""
+CONFIG_VERSION_MANUFACTURER="Xiaomi"
+CONFIG_VERSION_MANUFACTURER_URL="http://www.miwifi.com/"
+CONFIG_VERSION_NUMBER="ALPHA"
+CONFIG_VERSION_PRODUCT="Redmi AX6"
+CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
+CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
+# CONFIG_WPA_WOLFSSL is not set
+CONFIG_PACKAGE_kmod-nls-base=y
+
+
 # CONFIG_WPA_WOLFSSL is not set
 CONFIG_PACKAGE_kmod-nls-base=y
