--- a/config/5.15-im-ax6.config
+++ b/config/5.15-im-ax6.config
@@ -303,8 +303,8 @@ CONFIG_TARGET_OPTIONS=y
 CONFIG_VERSIONOPT=y
 
 
-CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
-CONFIG_VERSION_CODE="0623-3f9aff0"
+#CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
+#CONFIG_VERSION_CODE="0623-3f9aff0"
 CONFIG_VERSION_CODE_FILENAMES=y
 CONFIG_VERSION_DIST="OpenWrt"
 CONFIG_VERSION_FILENAMES=y
